# flaskr

./: LICENSE  pyproject.toml
src/flaskr/: __init__.py  db.py
