[tool.poetry]
name = "flaskr"
version = "0.1.0"
description = ""
authors = ["Sean Tully <14188124+multipitch@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
click = "^7.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^4.3.21"
black = "^19.10b0"
pylint = "^2.4.4"
flake8 = "^3.7.9"
bandit = "^1.6.2"
mypy = "^0.770"

[tool.black]
line-length=79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

